@@ -154,8 +154,8 @@ static const j28_pin_t j28_pin[J28_NUM_PINS] = {
 #define J15_PIN_RW(b)   MIOS32_SYS_LPC_PINSET(J15_RW_PORT, J15_RW_PIN, b)
 
 #define J15_PIN_SERLCD_DATAOUT(b) MIOS32_SYS_LPC_PINSET(J15_RW_PORT, J15_RW_PIN, b)
-#define J15_PIN_SERLCD_SCLK_0     MIOS32_SYS_LPC_PINSET_0(J15_E1_PORT, J15_E1_PIN)
-#define J15_PIN_SERLCD_SCLK_1     MIOS32_SYS_LPC_PINSET_1(J15_E1_PORT, J15_E1_PIN)
+#define J15_PIN_SERLCD_SCLK_0     { MIOS32_SYS_LPC_PINSET_0(J15_E1_PORT, J15_E1_PIN); MIOS32_SYS_LPC_PINSET_0(J15_E2_PORT, J15_E2_PIN); }
+#define J15_PIN_SERLCD_SCLK_1     { MIOS32_SYS_LPC_PINSET_1(J15_E1_PORT, J15_E1_PIN); MIOS32_SYS_LPC_PINSET_1(J15_E2_PORT, J15_E2_PIN); }
 
 #define J15_PIN_RCLK_0  MIOS32_SYS_LPC_PINSET_0(J15_RCLK_PORT, J15_RCLK_PIN)
 #define J15_PIN_RCLK_1  MIOS32_SYS_LPC_PINSET_1(J15_RCLK_PORT, J15_RCLK_PIN)
@@ -880,6 +880,8 @@ s32 MIOS32_BOARD_J28_SerDataShift(u8 data)
   J28_PIN_SER_SCLK_0;
   J28_PIN_SER_SCLK_0;
   J28_PIN_SER_SCLK_0;
+  J28_PIN_SER_SCLK_1;
+  J28_PIN_SER_SCLK_1;
   J28_PIN_SER_SCLK_1;
 
   return 0; // no error
