@@ -185,8 +185,8 @@ static const j10_pin_t j10_pin[J10_NUM_PINS] = {
 #define J15_PIN_RW(b)   PIN_SET(J15_RW_PORT, J15_RW_PIN, b)
 
 #define J15_PIN_SERLCD_DATAOUT(b) PIN_SET(J15_RW_PORT, J15_RW_PIN, b)
-#define J15_PIN_SERLCD_SCLK_0     { J15_E1_PORT->BSRRH = J15_E1_PIN; }
-#define J15_PIN_SERLCD_SCLK_1     { J15_E1_PORT->BSRRL = J15_E1_PIN; }
+#define J15_PIN_SERLCD_SCLK_0     { J15_E1_PORT->BSRRH = J15_E1_PIN; J15_E2_PORT->BSRRH = J15_E2_PIN; }
+#define J15_PIN_SERLCD_SCLK_1     { J15_E1_PORT->BSRRL = J15_E1_PIN; J15_E2_PORT->BSRRL = J15_E2_PIN; }
 
 #define J15_PIN_RCLK_0  { J15_RCLK_PORT->BSRRH = J15_RCLK_PIN; }
 #define J15_PIN_RCLK_1  { J15_RCLK_PORT->BSRRL = J15_RCLK_PIN; }
